--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "jspdf": "^2.5.1"
-"@supabase/supabase-js": "^2.45.0",
+    "@supabase/supabase-js": "^2.45.0",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "jspdf": "^2.5.1"
   }
 }
+
 
