--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
     "archiver": "^6.0.2"
   }
 }
-
-
-
